Fixed spacing

--- a/frontend/src/app/components/dashboard/_dashboard.scss
+++ b/frontend/src/app/components/dashboard/_dashboard.scss
@@ -1,7 +1,7 @@
 .dashboard-container {
     font-size: 1rem;
     background-color: rgb(248,248,255);
-    height: 93%;
+    height: 94%;
     width: 100%;
     display: flex;
     overflow: hidden;
@@ -54,7 +54,7 @@
 }
 
 .dashboard-nav {
-    height: 3rem;
+    height: 6%;
     padding: .3rem;
     background-color: rgb(72, 0, 105) !important;
     .back-button-container {
